--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,15 @@
 body{
     background-color: rgb(229, 229, 229);
     font-family: "Didact Gothic";
+
 }
 
 #container{
     position: absolute;
     height: 200px;
-    border: 4px solid rgb(158, 158, 158)
+    border: 3px solid rgb(158, 158, 158);
+    top: calc(50% - 100px);
+    left: calc(50% - 350px)
 }
 
 .whitenote{
