--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@ body{
     background-color: rgb(229, 229, 229);
     margin-right: 15%;
     margin-left: 15%;
-    display: flex;
-    justify-content: space-evenly;
     height:100%;
 }
 
@@ -21,14 +19,20 @@ body{
     justify-content: space-evenly;
     width: 100%;
     height: 60%;
+    margin: auto;
+    margin-top: 20%;
+    flex-wrap: wrap;
 }
 
 #keyboard{
-    position: absolute;
+    position: static;
     height: 200px;
     border: 3px solid rgb(158, 158, 158);
-    margin-top: 40%;
     border-radius: 2px;
+    max-width: max-content;
+    margin: auto;
+    margin-top: 5%;
+    display: flex;
 }
 
 .whitenote{
@@ -57,10 +61,8 @@ body{
     list-style: none;
     display: flex;
     flex-direction: column;
-    margin-top: 20%;
     padding: 10px;
     width: 150px;
-    height: 160px;
 }
 
 .osc-header{
@@ -73,7 +75,8 @@ body{
 .osctypes{
     font-size:90%;
     background-color: rgb(229, 229, 229);
-    text-align: center; 
+    text-align: center;
+    margin-bottom: 10px;
 }
 
 .osc-container .osctypes .oscbuttons{
@@ -96,7 +99,7 @@ body{
 .volume-container{
     display: block;
     width: 50%;
-    position: absolute;
+    margin: auto;
 }
 
 .volume-header{
@@ -150,7 +153,6 @@ body{
     height: 160px;
     overflow: hidden;
     align-content: center;
-    margin-top: 20%;
 }
 
 .envelope-controls-container-container{
@@ -182,12 +184,15 @@ body{
     display: inline-block;
     position: relative;
     padding: 10px 20px;
-    background: black;
+    background-color: black;
     margin-top: 30%;
     writing-mode: bt-lr;
     -webkit-appearance: slider-vertical;
 }
 
+.envelope::-moz-range-track{
+    color: blue;
+}
 .envelope::-moz-range-thumb{
 
 }
@@ -199,18 +204,5 @@ body{
     body{
         margin-left: 8%;
         margin-right: 8%;
-    }
-
-    #keyboard{
-        margin-top: 50%
-    }
-
-    .osc-container{
-        height: 140px
-    }
-
-    .envelope-controls-container-container{
-        margin-left: 0%;
-        height: 140px
     }
 }
