--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ body{
     width: 100%;
     height: 60%;
     margin: auto;
-    margin-top: 20%;
     flex-wrap: wrap;
 }
 
@@ -53,6 +52,14 @@ body{
     border: 1px solid rgb(158, 158, 158);
     background-color: rgb(158, 158, 158);
     transition: 150ms;
+}
+.oscilloscope-container{
+    display: flex;
+    justify-content: center;
+    height: 100px;
+    width:300px;
+
+
 }
 
 .osc-container{
