--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,8 @@ body{
     display: flex;
     justify-content: center;
     height: 100px;
-    width:300px;
-
-
+    width:100%;
+    margin-bottom: 100px ;
 }
 
 .osc-container{
