--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,13 @@ body{
     background-color: var(--bg);
     margin-right: 15%;
     margin-left: 15%;
+    margin-top: 10%;
     height:100%;
+    overflow-y: hidden;
+}
+
+a{
+    color: inherit;
 }
 
 .patch-header{
@@ -45,19 +51,108 @@ body{
     color: var(--text)
 }
 
-.dark-mode-container{
-    border: 2px solid var(--pannel);
+.menu-container{
+    position: absolute;
+    left: -43px;
+}
+
+.hamburger{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    margin-left: 3px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    z-index: 5;
+    top: -2px;
+}
+
+.line{
+    width: 100%;
+    height: 3px;
+    background-color: var(--accent);
+    transition: all 250ms;
+}
+
+.menu{
+    height: 100%;
+    position: absolute;
+    opacity: 0;
+    transition: 250ms;
+    transition-property: opacity;
+    z-index: -1;
+
+}
+
+.appear{
+    opacity: 1;
+    z-index: 4;
+}
+
+.menu-list{
+    width: 320px;
+    height: 100%;
+    background-color: var(--pannel);
+    list-style: none;
+    position: absolute;
+    top: 50px;
+    z-index: 4;
     display: flex;
     justify-content: center;
-    width: max-content;
+    flex-direction: column;
+}
+
+.menu-item{
+    color: var(--text);
+    letter-spacing: 2px;
+    font-weight: 100;
+    font-size: 20px;
+    margin-top: 16.6px ;
+    margin-bottom: 16.6px ;
+    cursor: pointer;
+}
+
+.menu-item .load{
+    cursor: pointer
+}
+
+.change .line-1{
+    transform: rotateZ(-45deg) translate(-8px, 6px);
+}
+
+.change .line-2{
+    opacity: 0;
+}
+
+.change .line-3{
+    transform: rotateZ(45deg) translate(-8px, -6px);
+}
+
+.blur{
+    filter: blur(4px);
+    transition: all 250ms;
+}
+
+.dark-mode-container{
+    flex-direction: row;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .dark-mode-header{
     font-weight: 300;
-    font-size: 15px;
-    color: var(--text)
+    font-size: 20px;
+    color: var(--text);
+    letter-spacing: 2px;
+    display: inline-block;
 }
 
+.dark-mode-toggle{
+    padding-top: 16.6px ;
+}
 input[type=checkbox]{
 	height: 0;
 	width: 0;
@@ -67,7 +162,7 @@ input[type=checkbox]{
     visibility: hidden;
 }
 
-label {
+.toggle {
 	cursor: pointer;
 	text-indent: -9999px;
 	width: 52px;
@@ -76,16 +171,15 @@ label {
 	float: right;
 	border-radius: 100px;
     position: relative;
-    margin-top: 50%;
 }
 
-label:after {
+.toggle:after {
 	content: '';
 	position: absolute;
 	top: 3px;
 	left: 3px;
 	width: 20px;
-	height: 20px;
+    height: 20px;
 	background: #fff;
 	border-radius: 90px;
 	transition: 0.3s;
@@ -100,7 +194,7 @@ input:checked + label:after {
 	transform: translateX(-100%);
 }
 
-label:active:after {
+.toggle:active:after {
 	width: 45px;
 }
 
@@ -192,6 +286,7 @@ label:active:after {
 .meter{
     border: 1px solid var(--pannel)
 }
+
 .osc-container{
     position: static;
     border: 2px solid var(--pannel);
